for github link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="exchange-rate">1 USD = 410.56 NGN </div>
         <button>Get Rate</button>
     </form>
-    <footer> <p> Designed by <a href="https://github.com/pjames" target="_blank">Ponmile Adebisi</a></p></footer>
+    <footer> <p> Designed by <a href="https://github.com/pjmiles/Exchange-rate-app" target="_blank">Ponmile Adebisi</a></p></footer>
     </div>
 </body>
 </html>
